--- a/config.toml
+++ b/config.toml
@@ -49,5 +49,8 @@ googleAnalytics = "UA-131402196-1"
     url = "guides/"
     weight = 4
 
-
+[[menu.main]]
+    name = "projects"
+    url = "projects/"
+    weight = 5
 
