Update to remove git ref + change universal diagram image

--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ publishDir = "_deploy"
 # whether to use robots.txt
 enableRobotsTXT = true
 # whether to use git commit log
-enableGitInfo = true
+enableGitInfo = false
 # whether to use emoji code
 enableEmoji = true
 
