--- a/config.toml
+++ b/config.toml
@@ -84,7 +84,7 @@ enableEmoji = true
     # whether to enable twemoji
     twemoji = false
     # whether to enable lightgallery
-    lightgallery = false
+    lightgallery = true
     # whether to enable the ruby extended syntax
     ruby = true
     # whether to enable the fraction extended syntax
