--- a/config.toml
+++ b/config.toml
@@ -307,9 +307,9 @@ enableEmoji = true
         [languages.en.params.home.profile]
           enable = true
           # Gravatar Email for preferred avatar in home page
-          gravatarEmail = "cchesser@gmail.com"
+          # gravatarEmail = "cchesser@gmail.com"
           # URL of avatar shown in home page
-          avatarURL = "/img/avatar-icon.png"
+          avatarURL = "/img/me.png"
           # title shown in home page (HTML format is supported)
           title = "thoughts"
           # subtitle shown in home page
